tests/baselines/reference/parserComputedPropertyName28.errors.txt
parserComputedPropertyName28.ts(2,6): error TS2304: Cannot find name 'e'.
parserComputedPropertyName28.ts(3,6): error TS2304: Cannot find name 'e2'.


==== parserComputedPropertyName28.ts (2 errors) ====
    class C {
        [e]: number = 0;
         ~
!!! error TS2304: Cannot find name 'e'.
        [e2]: number
         ~~
!!! error TS2304: Cannot find name 'e2'.
    }